sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: not found: value temps
      if(max < temp){max = temps;imax=k}
                           ^